# classical-mechanics-from-a-geometric-point-of-view

./: LICENSE  README.md  README2.md  pyproject.toml  readme.md
assignments/: ME421_ControlSystems_Lab.ipynb
meachanics/answers-to-selected-assignments/: Examples_of_Describing_Motion_in_Moving_Frames.ipynb
mechanics/: Answers_2_getting_started_Assignment_0.ipynb  readme.md
mechanics /answers-to-selected-assignments/: Galilean_Mechanics_Forum_Replies.ipynb  momen_of_inertia.ipynb  moment_of_inertia.ipynb
mechanics/H5P-Interactive-lessons/: conservation-of-linear-momentum-in-the-universe.h5p  galilean-space-time-assumptions-and-inertial-frames.h5p  lesson-on-conservation-of-linear-momentum-in-the-universe-5.h5p  lesson-on-galilean-space-time-assumptions-and-inertial-frames-4.h5p  meaning-of-angular-velocity-15.h5p  motion-in-non-inertial-frames-13.h5p  motion-in-non-inertial-frames-15.h5p  preparation-for-leaning-mechanics-from-a-geometric-point-of-view.h5p
mechanics/answers-to-selected-assignments/: Answers_2_getting_started_Assignment_0.ipynb  Assignment_InertialObservers_SampleAnswers.ipynb  Classical_Mechanics_Assignment_1_InertialObservers_SampleAnswers.ipynb  Classical_Mechanics_Assignment_InertialObservers_SampleAnswers.ipynb  Classical_Mechanics_Modeling_Coupled_Systems_Answer.ipynb  Examples_of_Describing_Motion_in_Moving_Frames.ipynb  FAQs_Galilean_Mechanics.ipynb  Galilean_Mechanics_Forum_Replies.ipynb  Sample_Answers_Getting_Started_Skill_Assessment_Quiz.ipynb  Sample_Answers_Skill_Assessment_Quiz.ipynb  Sample_answer_to_motion_in_earth_moving_frame.ipynb  Sample_answer_to_oscillatory_motion_in_moving_frames.ipynb  is_space_independent_of_time.ipynb  momen_of_inertia.ipynb  moment_of_inertia.ipynb  overall_comprehension_assignmen_answers.ipynb  overall_comprehension_assignment_01_answers.ipynb  sample_answer_to_modeling_a_simple_couped_system.ipynb  sample_answer_to_modeling_a_simple_coupled_system.ipynb  the_3_particle_universe.ipynb  two_particle_thermalization.ipynb
mechanics/assignments/: Classical_Mechanics_Assignmen_Modeling_Simulation_Coupled_Mechanical_Systems.ipynb  Classical_Mechanics_Assignment_1.ipynb  Classical_Mechanics_Assignment_Angular_Velocity.ipynb  Classical_Mechanics_Assignment_Modeling.ipynb  Classical_Mechanics_Assignment_Motion_in_Non_Inertial_Frames.ipynb  Classical_Mechanics_Rigid_Body_Equations.ipynb  Classical_Mechanics__Assignment_2.ipynb  Examples_Describing_Motion_in_Moving_Frames_Assignment.ipynb  ME421_ControlSystems_Lab.ipynb  Modeling_Simulation_Coupled_Mechanical_Systems.ipynb  RBDQuanserAero.ipynb  assignment_on_modeling_a_simple_couped_system.ipynb  assignment_on_the_3_particle_universe.ipynb  assignment_to_modeling_a_simple_coupled_system.ipynb  motion_in_earth_moving_frame.ipynb  sample_answer_to_modeling_a_simple_coupled_system.ipynb
mechanics/class-notes/: Mugas_Classical_Mechanics.ipynb  (+1 more)
quizes/: questions-ME211-2022-top-20221115-1606.xml
rigid-body-control/: ME421_RigidbodyControlSystems_Lab.ipynb  Mugas_Rigid_Body_Control.ipynb  RBDQuanserAero_DHSM.ipynb  RigidBodyIntinsicEKF_DHSM.ipynb  Twin_Rotor_Attitude_Tracking_DHSM.ipynb
rigid_body_control/: Mugas_Rigid_Body_Control.ipynb
sim/: rigid_body_sim.py
sims/: __init__.py  kalman_filter.py  rigid_body_sim.py
supplementary/: E21_Discussion.ipynb  XKCD_plots.ipynb  answers-IntroductiontoPython_Workshop_BandaraGCT_31_08_2021.ipynb  vector_spaces.ipynb  what_is_to_learn.ipynb
(+12 files in other folders)
