[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "rigid-body-sim"
version = "0.1.0"
requires-python = ">=3.9"
description = "A simple class for rigid body simulations."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mugalan", email = "mugalan@gmail.com" }]

# Put classifiers INSIDE [project]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]

# Runtime deps your class actually imports
dependencies = [
  "numpy>=2.0",
  "scipy>=1.10",
  "sympy>=1.12",
  "plotly>=5,<6",
  "pandas>=2.0,<3.0",
  "matplotlib>=3.7",
  "simdkalman==1.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "black>=24.3",
  "mypy>=1.10",
  "hatch>=1.12"
]

[project.urls]
Repository = "https://github.com/mugalan/classical-mechanics-from-a-geometric-point-of-view.git"


# Hatchling build config
[tool.hatch.build.targets.wheel]
packages = ["sims"]

[tool.hatch.build.targets.sdist]
include = [
  "sims/**",
  "README.md"
]

